# exspeed

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: benchmarks.yml
bench/: README.md
bench/compare/: kafka.yml
bench/results/: 2026-04-21-laptop-async.json  2026-04-21-laptop-sync.json  2026-04-21-laptop-v03-async.json  2026-04-21-laptop-v03-sync.json
crates/exspeed/: Cargo.toml
crates/exspeed-api/: Cargo.toml
crates/exspeed-api/src/: lib.rs  middleware.rs  state.rs
crates/exspeed-api/src/handlers/: cluster.rs  connections.rs  connectors.rs  consumers.rs  health.rs  leases.rs  metrics.rs  mod.rs  queries.rs  streams.rs  views.rs  webhooks.rs  whoami.rs
crates/exspeed-api/tests/: healthz_leadership_test.rs  leader_gate_test.rs  readyz_test.rs
crates/exspeed-api/tests/common/: mod.rs
crates/exspeed-bench/: Cargo.toml
crates/exspeed-bench/src/: host.rs  lib.rs  main.rs  profile.rs  renderer.rs  report.rs
crates/exspeed-bench/src/driver/: exspeed.rs  kafka.rs  mod.rs  publisher.rs
crates/exspeed-bench/src/scenarios/: dispatch.rs  exql.rs  fanout.rs  latency.rs  mod.rs  publish.rs
crates/exspeed-bench/tests/: cli_help_test.rs  driver_exspeed_test.rs  embedded_server.rs  renderer_test.rs  scenarios_test.rs
crates/exspeed-broker/: Cargo.toml
crates/exspeed-broker/src/: broker.rs  broker_append.rs  broker_append_snapshot.rs  consumer_state.rs  delivery.rs  handlers.rs  leadership.rs  lease_retrier.rs  lib.rs  persistence.rs  queue_depth_task.rs  retention_task.rs  snapshot_task.rs
crates/exspeed-broker/src/consumer_store/: file.rs  mod.rs  postgres.rs  redis.rs  s3.rs
crates/exspeed-broker/src/lease/: mod.rs  noop.rs  postgres.rs  redis.rs
crates/exspeed-broker/src/replication/: client.rs  coordinator.rs  cursor.rs  errors.rs  mod.rs  server.rs  wire.rs
crates/exspeed-broker/src/work_coordinator/: mod.rs  noop.rs  postgres.rs  redis.rs
crates/exspeed-broker/tests/: leadership_test.rs  lease_retrier_test.rs  postgres_lease_test.rs  redis_lease_test.rs  replication_client_test.rs  replication_coordinator_test.rs  replication_cursor_test.rs  replication_emission_test.rs  replication_retention_emission_test.rs  replication_server_test.rs  replication_wire_test.rs
crates/exspeed-common/: Cargo.toml
crates/exspeed-common/src/: auth.rs  error.rs  lib.rs  metrics.rs  subject.rs  types.rs
crates/exspeed-common/src/auth/: error.rs  glob.rs  mod.rs  store.rs  types.rs
crates/exspeed-connectors/: Cargo.toml
crates/exspeed-connectors/src/: config.rs  dedup.rs  dlq.rs  file_watcher.rs  lib.rs  manager.rs  offset.rs  retry.rs  traits.rs  transform.rs
crates/exspeed-connectors/src/builtin/: http_poll.rs  http_sink.rs  http_webhook.rs  jdbc_poll.rs  jdbc_sink.rs  mod.rs  mssql_cdc.rs  pgoutput.rs  postgres.rs  postgres_cdc.rs  postgres_outbox.rs  rabbitmq_sink.rs  rabbitmq_source.rs  s3_sink.rs
crates/exspeed-connectors/src/builtin/jdbc/: backend.rs  dialect.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  schema.rs  sqlite.rs  sqlx_backend.rs  tiberius_backend.rs
crates/exspeed-connectors/src/offset_store/: file.rs  mod.rs  postgres.rs  redis.rs  s3.rs  stream.rs
crates/exspeed-processing/: Cargo.toml
crates/exspeed-processing/benches/: scan.rs
crates/exspeed-processing/src/: error.rs  lib.rs  materialized_view.rs  query_registry.rs  types.rs
crates/exspeed-processing/src/parser/: ast.rs  dialect.rs  error.rs  mod.rs  transform.rs
crates/exspeed-processing/src/planner/: column_set.rs  logical.rs  mod.rs  physical.rs
crates/exspeed-processing/src/runtime/: bounded.rs  continuous.rs  eval.rs  functions.rs  mod.rs  row_builder.rs
crates/exspeed-processing/src/runtime/operators/: aggregate.rs  filter.rs  index_scan.rs  join.rs  limit.rs  mod.rs  project.rs  scan.rs  sort.rs  stream_join.rs  topn.rs  windowed_aggregate.rs
crates/exspeed-protocol/: Cargo.toml
crates/exspeed-protocol/src/: codec.rs  error.rs  frame.rs  lib.rs  opcodes.rs
crates/exspeed-protocol/src/messages/: ack.rs  connect.rs  consumer.rs  fetch.rs  mod.rs  ping.rs  publish.rs  publish_batch.rs  record_delivery.rs  records_batch.rs  replicate.rs  seek.rs  stream_mgmt.rs
crates/exspeed-storage/: Cargo.toml
crates/exspeed-storage/src/: encoding.rs  lib.rs
crates/exspeed-storage/src/file/: bloom_filter.rs  io_errors.rs  mod.rs  offset_index.rs  partition.rs  secondary_index.rs  segment_appender.rs  segment_reader.rs  segment_syncer.rs  segment_writer.rs  stream_config.rs  time_index.rs  wal.rs  wal_appender.rs  wal_syncer.rs
crates/exspeed-storage/src/memory/: mod.rs
crates/exspeed-storage/src/s3/: cache.rs  config.rs  manifest.rs  mod.rs  uploader.rs
crates/exspeed-storage/src/tests/: file_tests.rs  mod.rs  segment_recovery_tests.rs  segment_syncer_tests.rs  trait_tests.rs  wal_appender_tests.rs  wal_syncer_tests.rs
crates/exspeed-streams/: Cargo.toml
crates/exspeed/src/: lib.rs  log_format.rs  main.rs
crates/exspeed/src/cli/: auth.rs  client.rs  connector.rs  consumer_cmd.rs  format.rs  mod.rs  publish.rs  query.rs  server.rs  server_lock.rs  server_tls.rs  snapshot.rs  stream.rs  tail.rs  view.rs
crates/exspeed/tests/: api_test.rs  auth_test.rs  broker_test.rs  cluster_followers_endpoint_test.rs  connect_test.rs  connector_dlq_test.rs  connector_test.rs  consumer_test.rs  dedup_test.rs  exql_test.rs  exql_windows_test.rs  jdbc_poll_test.rs  jdbc_sink_mssql_test.rs  jdbc_sink_mysql_test.rs  jdbc_sink_postgres_test.rs  jdbc_sink_sqlite_test.rs  lease_api_test.rs  lifecycle_test.rs  multi_subscriber_test.rs  multi_tenant_auth_test.rs  multipod_leader_test.rs  multipod_lease_test.rs  multipod_replication_test.rs  observability_test.rs  publish_batch_test.rs  replication_auth_test.rs  replication_bootstrap_test.rs  replication_divergent_history_test.rs  replication_retention_gap_test.rs  replication_single_pod_test.rs  replication_slow_follower_test.rs  seek_test.rs  stream_delete_test.rs  tls_test.rs
crates/exspeed/tests/common/: db.rs
sdks/typescript/: LICENSE  (+4 more)
(+65 files in other folders)
