[workspace]
resolver = "2"
members = [
    "crates/exspeed",
    "crates/exspeed-common",
    "crates/exspeed-protocol",
    "crates/exspeed-streams",
    "crates/exspeed-storage",
    "crates/exspeed-broker",
    "crates/exspeed-api",
    "crates/exspeed-connectors",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Byte buffers (zero-copy, reference-counted)
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Async stream utilities
futures-util = { version = "0.3", features = ["sink"] }

# Checksums
crc32c = "0.6"

# Async traits
async-trait = "0.1"

# Config
toml = "0.8"

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# Database
tokio-postgres = "0.7"

# Observability / Metrics
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["metrics"] }
opentelemetry-prometheus = "0.28"
prometheus = "0.13"

[profile.dev]
opt-level = 1
