[workspace]
resolver = "2"
members = [
    "crates/exspeed",
    "crates/exspeed-common",
    "crates/exspeed-protocol",
    "crates/exspeed-streams",
    "crates/exspeed-storage",
    "crates/exspeed-broker",
    "crates/exspeed-api",
    "crates/exspeed-connectors",
    "crates/exspeed-processing",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/alternayte/exspeed"
homepage = "https://github.com/alternayte/exspeed"
authors = ["Exspeed contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Byte buffers (zero-copy, reference-counted)
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async stream utilities
futures-util = { version = "0.3", features = ["sink"] }

# Checksums
crc32c = "0.6"

# Async traits
async-trait = "0.1"

# Config
toml = "0.8"

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }

# SQL parsing
sqlparser = "0.61"

# Database
tokio-postgres = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "any"] }

# Message queue
lapin = "2"

# Object storage
rust-s3 = "0.37"

# Redis
redis = { version = "0.27", features = ["tokio-comp"] }

# Postgres logical replication
pgwire-replication = { version = "0.3", default-features = false, features = ["scram"] }

# Filesystem watching
notify = "7"

# UUIDs
uuid = { version = "1", features = ["v4"] }

# Constant-time byte comparison (defends against timing oracles)
constant_time_eq = "0.3"

# Observability / Metrics
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["metrics"] }
opentelemetry-prometheus = "0.28"
prometheus = "0.13"

[profile.dev]
opt-level = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
