[package]
name = "exspeed-api"
version = "0.2.0"
edition = "2021"

[dependencies]
exspeed-common = { path = "../exspeed-common" }
exspeed-broker = { path = "../exspeed-broker" }
exspeed-protocol = { path = "../exspeed-protocol" }
exspeed-storage = { path = "../exspeed-storage" }
exspeed-streams = { path = "../exspeed-streams" }
exspeed-connectors = { path = "../exspeed-connectors" }
exspeed-processing = { path = "../exspeed-processing" }
axum = { workspace = true }
axum-server = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
prometheus = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
exspeed-storage = { path = "../exspeed-storage" }
exspeed-broker = { path = "../exspeed-broker" }
exspeed-connectors = { path = "../exspeed-connectors" }
exspeed-processing = { path = "../exspeed-processing" }
exspeed-streams = { path = "../exspeed-streams" }
exspeed-common = { path = "../exspeed-common" }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde_json = { workspace = true }
