[package]
name = "exspeed-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
exspeed-common = { path = "../exspeed-common" }
exspeed-streams = { path = "../exspeed-streams" }
exspeed-protocol = { path = "../exspeed-protocol" }
exspeed-storage = { path = "../exspeed-storage" }
bytes = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
redis = { workspace = true }
tokio-postgres = { workspace = true }
rust-s3 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
