[package]
name = "exspeed-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
constant_time_eq = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-prometheus = { workspace = true }
prometheus = { workspace = true }
sha2 = "0.10"
enumset = { version = "1", features = ["serde"] }
toml = "0.8"
