[package]
name = "exspeed-connectors"
version = "0.2.0"
edition = "2021"

[dependencies]
exspeed-common = { path = "../exspeed-common" }
exspeed-streams = { path = "../exspeed-streams" }
exspeed-broker = { path = "../exspeed-broker" }
exspeed-storage = { path = "../exspeed-storage" }
exspeed-processing = { path = "../exspeed-processing" }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio-postgres = { workspace = true }
sqlx = { workspace = true, features = ["chrono", "json"] }
chrono = { workspace = true }
lapin = { workspace = true }
futures-util = { workspace = true }
rust-s3 = { workspace = true }
notify = { workspace = true }
redis = { workspace = true }
pgwire-replication = { workspace = true }
opentelemetry = { workspace = true }
tiberius = { workspace = true }
bb8 = { workspace = true }
bb8-tiberius = { workspace = true }
url = "2"

[dev-dependencies]
tempfile = "3"
