[package]
name = "exspeed-processing"
version = "0.1.0"
edition = "2021"

[dependencies]
exspeed-common = { path = "../exspeed-common" }
exspeed-streams = { path = "../exspeed-streams" }
exspeed-storage = { path = "../exspeed-storage" }
sqlparser = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3"
