[package]
name = "exspeed-processing"
version = "0.5.0"
edition = "2021"

[dependencies]
exspeed-common = { path = "../exspeed-common" }
exspeed-streams = { path = "../exspeed-streams" }
exspeed-storage = { path = "../exspeed-storage" }
exspeed-broker = { path = "../exspeed-broker" }
sqlparser = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "scan"
harness = false
