[package]
name = "exspeed-protocol"
version = "0.3.0"
edition = "2021"

[dependencies]
exspeed-common = { path = "../exspeed-common" }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
