[package]
name = "exspeed-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
exspeed-streams = { path = "../exspeed-streams" }
exspeed-common = { path = "../exspeed-common" }
bytes = { workspace = true }
crc32c = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
