[package]
name = "exspeed-storage"
version = "0.1.1"
edition = "2021"

[dependencies]
exspeed-streams = { path = "../exspeed-streams" }
exspeed-common = { path = "../exspeed-common" }
bytes = { workspace = true }
crc32c = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rust-s3 = { workspace = true }
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
