[package]
name = "exspeed"
version = "0.1.0"
edition = "2021"

[lib]
name = "exspeed"
path = "src/lib.rs"

[[bin]]
name = "exspeed"
path = "src/main.rs"

[dependencies]
exspeed-common = { path = "../exspeed-common" }
exspeed-protocol = { path = "../exspeed-protocol" }
exspeed-broker = { path = "../exspeed-broker" }
exspeed-storage = { path = "../exspeed-storage" }
exspeed-streams = { path = "../exspeed-streams" }
exspeed-api = { path = "../exspeed-api" }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
portpicker = "0.1"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
serde_json = { workspace = true }
