[package]
name = "exspeed"
version = "0.1.0"
edition = "2021"

[lib]
name = "exspeed"
path = "src/lib.rs"

[[bin]]
name = "exspeed"
path = "src/main.rs"

[dependencies]
exspeed-common = { path = "../exspeed-common" }
exspeed-protocol = { path = "../exspeed-protocol" }
exspeed-broker = { path = "../exspeed-broker" }
exspeed-storage = { path = "../exspeed-storage" }
exspeed-streams = { path = "../exspeed-streams" }
exspeed-api = { path = "../exspeed-api" }
exspeed-connectors = { path = "../exspeed-connectors" }
exspeed-processing = { path = "../exspeed-processing" }
tokio = { workspace = true }
tokio-util = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
portpicker = "0.1"
tempfile = "3"
